--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.4.1",
+    "all": "^0.0.0",
     "react": "17.0.2",
     "react-native": "0.68.1",
     "react-native-vector-icons": "^9.1.0"
